production/ingress/ingress-laravel.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-laravel
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: laravel.pastikerja.xyz
    http:
      paths:
        - path:
          backend:
            serviceName: laravel-service
            servicePort: 80
