production/ingress/ingress-wp.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wordpress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: wordpress.pastikerja.xyz
    http:
      paths:
        - path:
          backend:
            serviceName: wordpress-service
            servicePort: 80
